fix: input styles overflowing from Top Navigation Bar

--- a/src/styles/components/TopNavigationBar.module.css
+++ b/src/styles/components/TopNavigationBar.module.css
@@ -64,7 +64,7 @@
   top: 3px;
 }
 
-input {
+.searchWrapper input {
   border: none;
   border-radius: 4px;
   height: 30px;
